# dont-use-script-compiler

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/frontend/: CMakeLists.txt
src/frontend/ast/: NodeVisitor.h  Type.h  ast.h
src/frontend/ast/expression/: BinaryExpression.h  ConstExpression.h  Expression.h
src/frontend/executor/: CMakeLists.txt  ExecutionNodeVisitor.cpp  ExecutionNodeVisitor.h
src/frontend/lexer/: CMakeLists.txt  Lexer.cpp  Lexer.h  LexerError.h  SourceCodeManager.h  Token.h  TokenType.h
src/frontend/parser/: CMakeLists.txt  ParseError.h  Parser.cpp  Parser.h
test/: CMakeLists.txt
test/lexer/: arithmetic_lexer_tests.cpp
test/parser/: parser_tests.cpp
